2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* mx-defs.h (blas_trans_type): New enum.
	(get_blas_char): New inline func.
	* dMatrix.cc (Matrix::utsolve, Matrix::ltsolve, Matrix::solve):
	Support transt parameter.
	* fMatrix.cc (FloatMatrix::utsolve, FloatMatrix::ltsolve,
	FloatMatrix::solve): Ditto.
	* CMatrix.cc (ComplexMatrix::utsolve, ComplexMatrix::ltsolve,
	ComplexMatrix::solve): Ditto.
	* fCMatrix.cc (FloatComplexMatrix::utsolve,
	FloatComplexMatrix::ltsolve, FloatComplexMatrix::solve): Ditto.
	* dMatrix.h, fMatrix.h, CMatrix.h, fCMatrix.h: Update.

2009-09-21  Jaroslav Hajek  <highegg@gmail.com>

	* mx-op-defs.h (VS_BIN_OP, SV_BIN_OP, VV_BIN_OP): Simplify.

2009-09-19  Jaroslav Hajek  <highegg@gmail.com>

	* dNDArray.h (NDArray::matrix_type): New typedef.
	* fNDArray.h (FloatNDArray::matrix_type): New typedef.
	* CNDArray.h (ComplexNDArray::matrix_type): New typedef.
	* fCNDArray.h (FloatComplexNDArray::matrix_type): New typedef.
	* boolNDArray.h (boolNDArray::matrix_type): New typedef.
	* charNDArray.h (charNDArray::matrix_type): New typedef.

	* dMatrix.h (Matrix::column_vector_type, 
	Matrix::row_vector_type): New typedefs.
	* fMatrix.h (FloatMatrix::column_vector_type,
	FloatMatrix::row_vector_type): New typedefs.
	* CMatrix.h (ComplexMatrix::column_vector_type,
	ComplexMatrix::row_vector_type): New typedefs.
	* fCMatrix.h (FloatComplexMatrix::column_vector_type,
	FloatComplexMatrix::row_vector_type): New typedefs.

2009-09-18  John W. Eaton  <jwe@octave.org>

	* mach-info.cc: Don't include oct-types.h.

2009-09-18  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (NoAlias): New template class.
	* dRowVector.cc (linspace): Rewrite.
	* fRowVector.cc (linspace): Rewrite.
	* CRowVector.cc (linspace): Rewrite.
	* fCRowVector.cc (linspace): Rewrite.
	* dMatrix.cc (linspace): New method.
	* dMatrix.h (linspace): Declare it.
	* fMatrix.cc (linspace): New method.
	* fMatrix.h (linspace): Declare it.
	* CMatrix.cc (linspace): New method.